--- a/gb/20/11/28/n12580669.md
+++ b/gb/20/11/28/n12580669.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rymkqn3238/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rymkqn3238/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rymkqn3238/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rymkqn3238/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rymkqn3238/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rymkqn3238/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rymkqn3238/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rymkqn3238/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rymkqn3238/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rymkqn3238/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rymkqn3238/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rymkqn3238/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rymkqn3238/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rymkqn3238/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rymkqn3238/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rymkqn3238/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rymkqn3238/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rymkqn3238/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rymkqn3238/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rymkqn3238/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rymkqn3238/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rymkqn3238/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rymkqn3238/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rymkqn3238/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>黑人女性挺川普：美国伟大在于理念</h2>
-<a href="https://git.io/JkFYA"><img width="600" src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/rymkqn3238/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d3gus727acem18.cloudfront.net/P9mVqfZSz"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>非洲移民克里米（MagnaFaith Krimi）女士表示，川普代表了美国梦的一切。（视频截图）
 </h6>
 <hr>
-	<p>【大纪元2020年11月28日讯】（大纪元记者孙洐源美国华盛顿DC报导）居住在<ahref="https://github.com/rymkqn3238/djy/blob/master/gb/tag/%E9%A9%AC%E9%87%8C%E5%85%B0%E5%B7%9E.md#1">马里兰州</a><ahref="https://github.com/rymkqn3238/djy/blob/master/gb/tag/%E5%B7%B4%E5%B0%94%E7%9A%84%E6%91%A9.md#1">巴尔的摩</a>的克里米（MagnaFaith Krimi）女士十多年前从尼日利亚移民，现在已经成为美国公民。她创办了一家揭露恐怖主义的媒体（Wardesk News），积极关注美国和尼日利亚的政治问题。</p>
-<p>11月21日，克里米参加华盛顿特区“<ahref="https://github.com/rymkqn3238/djy/blob/master/gb/tag/%E5%88%B6%E6%AD%A2%E7%AA%83%E7%A5%A8.md#1">制止窃票</a>”（Stop The Steal）集会，她在演讲中讲述了支持川普的理由，并诵读美国护照上印有的美国先贤的励志名言。</p>
+	<p>【大纪元2020年11月28日讯】（大纪元记者孙洐源美国华盛顿DC报导）居住在<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%A9%AC%E9%87%8C%E5%85%B0%E5%B7%9E.md#1">马里兰州</a><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B7%B4%E5%B0%94%E7%9A%84%E6%91%A9.md#1">巴尔的摩</a>的克里米（MagnaFaith Krimi）女士十多年前从尼日利亚移民，现在已经成为美国公民。她创办了一家揭露恐怖主义的媒体（Wardesk News），积极关注美国和尼日利亚的政治问题。</p>
+<p>11月21日，克里米参加华盛顿特区“<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%88%B6%E6%AD%A2%E7%AA%83%E7%A5%A8.md#1">制止窃票</a>”（Stop The Steal）集会，她在演讲中讲述了支持川普的理由，并诵读美国护照上印有的美国先贤的励志名言。</p>
 <p>集会结束后，克里米向《大纪元时报》更加详细地解释了她支持川普的原因，并阐述了她对何为一个真正的美国人和美国伟大之处的理解。</p>
-<p><a width="640" b="360" src=""></a><a href="https://git.io/JkFYA"><img width="600" src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/rymkqn3238/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/IouJ8NeT8vE?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
+<p><a width="640" b="360" src=""></a><a href="https://d3gus727acem18.cloudfront.net/P9mVqfZSz"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/IouJ8NeT8vE?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
 <h2>川普代表了美国梦的一切</h2>
 <p>克里米说：“因为川普代表了美国的一切，或者说美国梦。当我离开非洲来到美国，是因为我想要个人自由，想要政治自由，想要能够追求我的宗教自由。我在尼日利亚时没有这些自由。所以我来到美国，成为美国公民，自由是我渴望期待的。”</p>
 <p>克里米表示，奥巴马和拜登与尼日利亚现任总统穆罕默德·布哈里（Muhammadu Buhari）勾结，将布哈里推上尼日利亚总统的位置，奥巴马时期的对外政策使得恐怖主义在尼日利亚大行其道，信仰基督教的妇女和儿童遭到杀虐。</p>
@@ -24,8 +24,8 @@
 <p>克里米说：“我理解BLM在某些问题上不高兴，可以理解他们的抗议争取平等，可以理解抗议是想让别人听到你的声音，或者想推动变革，每个人都有权利在美国抗议，并要求变革。 ”“但我无法理解为何有人会提倡消减警察经费。警察带来的是安全、法律和秩序。”</p>
 <p>“（如果警察不再工作，）美国会变成一个第三世界国家，就像非洲的一些国家一样。我离开非洲来到美国是为了自由和安全。我不想再经历同样的事情。我想在一个健康的环境中抚养我的孩子。”</p>
 <h2>是什么让美国伟大？</h2>
-<p>拜登的“过度团队”成员中有46%的人是有色人种，近半成是女性。克里米认为，这个策略看上去对左派挺有吸引力的，“因为他们看的是肤色，而我看的不是肤色。我不在乎你是亚洲人、<ahref="https://github.com/rymkqn3238/djy/blob/master/gb/tag/%E9%BB%91%E4%BA%BA.md#1">黑人</a>、还是白人，我不关心这些。我关心的是你的原则、你的价值体系、和你作为一个人所代表的理念。 ”</p>
-<p>“你是<ahref="https://github.com/rymkqn3238/djy/blob/master/gb/tag/%E9%BB%91%E4%BA%BA.md#1">黑人</a>或者像“红脖子”（redneck）一样白的白人并不能让你自动成为一个美国人。让你真正成为美国人的是对宪法的理解和对宪法的维护，成为一个爱国者——不是你的肤色、不是你的口音、也不是你的宗教信仰。”</p>
+<p>拜登的“过度团队”成员中有46%的人是有色人种，近半成是女性。克里米认为，这个策略看上去对左派挺有吸引力的，“因为他们看的是肤色，而我看的不是肤色。我不在乎你是亚洲人、<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%BB%91%E4%BA%BA.md#1">黑人</a>、还是白人，我不关心这些。我关心的是你的原则、你的价值体系、和你作为一个人所代表的理念。 ”</p>
+<p>“你是<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%BB%91%E4%BA%BA.md#1">黑人</a>或者像‘红脖子’（redneck）一样白的白人并不能让你自动成为一个美国人。让你真正成为美国人的是对宪法的理解和对宪法的维护，成为一个爱国者——不是你的肤色、不是你的口音、也不是你的宗教信仰。”</p>
 <p>“所以对我来说，我不会被拜登的举动所迷惑，他就是组建一个全黑人内阁我也不在乎。我在乎的是确保我们有一个权利平等的国家。一个政府不干涉我们个人生活的国家，政府不会闯入我的卧室，告诉我在床上也必须戴口罩，政府不会告诉我的女儿必须和男孩们共用厕所，因为他们对自己的性取向感到困惑。”</p>
 <p>克里米说：“是什么让美国伟大？是我们都抛开原有的背景走到一起、抛开我们肤色、抛开我们的语调和口音，我们来到这里，我们共同相信一个被称为美国的理念。这就是美国的伟大之处！”</p>
 <p>“我是一个骄傲的美国黑人！”克里米女士特意用“黑色”（Black）一词强调自己是美国黑人，而没有用所谓政治正确的“非裔美国人”这一说法。</p>
@@ -35,42 +35,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/23/n12568655.md#1">不惧死亡威胁 川普支持者誓言寻求选举公正</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/23/n12569938.md#1">声援全美反选举作弊 麻州选民:不可绝望</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/25/n12573632.md#1">【选民心声】宾州哈里斯堡民众心声</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/25/n12574453.md#1">奥斯卡奖得主：拜登若当选 美国将陷巨险中</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/11/23/n12568655.md#1">不惧死亡威胁 川普支持者誓言寻求选举公正</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/11/23/n12569938.md#1">声援全美反选举作弊 麻州选民:不可绝望</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/11/25/n12573632.md#1">【选民心声】宾州哈里斯堡民众心声</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/11/25/n12574453.md#1">奥斯卡奖得主：拜登若当选 美国将陷巨险中</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10799353.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（1）</a></li><li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">前大陆公安：中共镇压法轮功早有预谋</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099100.md#1" target="_blank">郑兢业：人吃与吃人（五）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/7/n10767290.md#1" target="_blank">美18位参议员联合发声 谴责中共打压宗教</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/22/n12567180.md#1">曾预言中共病毒 英灵媒再预测2021年大事</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/16/n12553592.md#1">美国大十字日全食带预言川普大选及末世大决战</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/20/n12563807.md#1">《诸世纪》中第一个“反救世主”魔鬼是谁？</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/25/n12575381.md#1">救命之恩 “新世纪影视”演员感恩李洪志大师（中）</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/26/n12576644.md#1">木星与土星在冬至相合 800年来罕见天象</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/26/n12577737.md#1">【财商天下】公私合营复活？“待割韭菜”出逃</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/26/n12577367.md#1">【新闻大家谈】至暗时刻 重现奇迹关键密码</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/27/n12580108.md#1">【薇羽看世间】一场大重构和大觉醒的战争</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/26/n12576905.md#1">【大选更新11·26】律师：感谢川普总统</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/10/9/n12463902.md#1">【内幕】中共隐瞒文昌航天发射场突发事件</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/26/n12576238.md#1">鲍威尔乔州提交百页诉状 被指如炸弹之母</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/26/n12578100.md#1">范冰冰复出再遇阻？中共广电总局又发禁令</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/26/n12577188.md#1">谢金燕制作人吕晓栋猝逝 传倒卧高以翔墓园旁</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/25/n12575491.md#1">遭旧爱追款现身法庭 星爷笑言高院是否要装修</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/25/n12575280.md#1">章子怡为小苹果庆生 两人相互依偎似亲母女</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/24/n12573128.md#1">陶虹曝徐峥当年求婚：话没说完就被保安赶走</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/25/n12574162.md#1">天外飞来的？ 美国沙漠惊现神秘金属巨柱</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/26/n12576644.md#1">木星与土星在冬至相合 800年来罕见天象</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/24/n12572307.md#1">喝一杯“天然B群” 提神、助眠又解毒</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/26/n12576231.md#1">超萌拉布拉多犬 台海关缉毒犬宝宝开放寄养</a></li>
-<li><a href="https://github.com/uojmjs317/djy/blob/master/gb/20/11/25/n12573496.md#1">美国男子在餐厅点一杯啤酒 给3000美元小费</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735181.md#1">【思想领袖】封锁对疫情不起作用 且特别有害（中）</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740132.md#1">【财商天下】核检日赚一亿 钱进了谁的口袋？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">任贤齐介绍田中老家 吃喝不花钱自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rymkqn3238/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rymkqn3238/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/28/n12580669.htm">黑人女性挺川普：美国伟大在于理念</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/28/n12580669.htm">黑人女性挺川普：美国伟大在于理念</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rymkqn3238/djy/blob/master/gb/20/11/28/n12580669.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rymkqn3238/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rymkqn3238/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rymkqn3238/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rymkqn3238/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rymkqn3238/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/20/11/28/n12580669.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
